--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>EnteBuddy</title>
     <link rel="stylesheet" href="./index.css" type="text/css">
+    <link rel="icon" href="./src/User/img/logo.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
